<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.seriesdetailsactivity">

    <LinearLayout
        android:id="@+id/pagelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/series_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/series_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_series_talks_about_and_incridible_action_series">
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_homepage"
                android:background="@color/colorPrimary"
                android:layout_margin="10dp"
                android:padding="10dp">
            </Button>
            <Button
                android:id="@+id/addtowishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_wishlist"
                android:background="@color/colorPrimary"
                android:layout_margin="10dp"
                android:padding="10dp">
            </Button>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>